attached_assets/Pasted--GeneticTrading-alex-alex-System-Product-Name-mnt-windows-GeneticTrading-torchrun-nproc-per-nod-1752201927544_1752201927545.txt
(GeneticTrading) alex@alex-System-Product-Name:/mnt/windows/GeneticTrading$ torchrun --nproc_per_node=4 --nnodes=1 --node_rank=0 --master_addr=127.0.0.1 --master_port=12355 main.py --data-folder ./data_txt --max-rows 50000 --adaptive-iterations 3 --log-level INFO --training-mode adaptive
W0710 19:44:10.006000 7572 site-packages/torch/distributed/run.py:766] 
W0710 19:44:10.006000 7572 site-packages/torch/distributed/run.py:766] *****************************************
W0710 19:44:10.006000 7572 site-packages/torch/distributed/run.py:766] Setting OMP_NUM_THREADS environment variable for each process to be 1 in default, to avoid your system being overloaded, please further tune the variable for optimal performance in your application as needed. 
W0710 19:44:10.006000 7572 site-packages/torch/distributed/run.py:766] *****************************************
Traceback (most recent call last):
  File "/mnt/windows/GeneticTrading/main.py", line 75, in <module>
Traceback (most recent call last):
  File "/mnt/windows/GeneticTrading/main.py", line 75, in <module>
    from data_preprocessing import create_environment_data
    from data_preprocessing import create_environment_data  File "/mnt/windows/GeneticTrading/data_preprocessing.py", line 1128

    except FileNotFoundError:
                             ^
IndentationError  File "/mnt/windows/GeneticTrading/data_preprocessing.py", line 1128
: unindent does not match any outer indentation level    
except FileNotFoundError:
                             ^
IndentationError: unindent does not match any outer indentation level
Traceback (most recent call last):
Traceback (most recent call last):
  File "/mnt/windows/GeneticTrading/main.py", line 75, in <module>
  File "/mnt/windows/GeneticTrading/main.py", line 75, in <module>
        from data_preprocessing import create_environment_datafrom data_preprocessing import create_environment_data

  File "/mnt/windows/GeneticTrading/data_preprocessing.py", line 1128
  File "/mnt/windows/GeneticTrading/data_preprocessing.py", line 1128
        except FileNotFoundError:
except FileNotFoundError:
                                                          ^^

IndentationErrorIndentationError: : unindent does not match any outer indentation levelunindent does not match any outer indentation level

E0710 19:44:15.623000 7572 site-packages/torch/distributed/elastic/multiprocessing/api.py:874] failed (exitcode: 1) local_rank: 0 (pid: 7611) of binary: /home/alex/miniconda3/envs/GeneticTrading/bin/python3.12
Traceback (most recent call last):
  File "/home/alex/miniconda3/envs/GeneticTrading/bin/torchrun", line 8, in <module>
    sys.exit(main())
             ^^^^^^
  File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 355, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/run.py", line 892, in main
    run(args)
  File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/run.py", line 883, in run
    elastic_launch(
  File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/launcher/api.py", line 139, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/alex/miniconda3/envs/GeneticTrading/lib/python3.12/site-packages/torch/distributed/launcher/api.py", line 270, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
main.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-07-10_19:44:15
  host      : alex-System-Product-Name
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 7612)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2025-07-10_19:44:15
  host      : alex-System-Product-Name
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 7613)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2025-07-10_19:44:15
  host      : alex-System-Product-Name
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 7614)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-07-10_19:44:15
  host      : alex-System-Product-Name
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 7611)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
(GeneticTrading) alex@alex-System-Product-Name:/mnt/windows/GeneticTrading$ 
